gitignore latex generated files

--- a/Poker02_Report/Poker02_Report.tex
+++ b/Poker02_Report/Poker02_Report.tex
@@ -44,7 +44,7 @@
 % page charge instructions.
 % Put where the files are available in the appropriate places.
 
-\title{Poker Project - Team \#02}
+\title{An Adversarial Approach for building a Limit Texas Hold'em Poker Agent - Team \#02}
 
 
 % Multiple author syntax (remove the single-author syntax above and the \iffalse ... \fi here)
